2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Rename temporary variable to
	avoid shadowing one in enclosing scope, which can lead to
	cut-and-paste errors (ask me how I know).

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Slightly refactor to indirect
	`putenv` calls through an error-checking wrapper.
	(xputenv): Add new function to die if `putenv()` fails.
	(main): Update call sites to use it.

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	[groff]: Add information to diagnostic messages.

	* src/roff/groff/groff.cpp (main): Report underlying system
	error if `putenv()` fails.
	(handle_unknown_desc_command): Set globals `current_filename`
	and `current_lineno` from `filename` and `lineno` arguments
	passed to us to we can use the simpler interface of `error()`
	rather than `error_with_file_and_line()`.

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	[libgroff]: Update return type of `font::load_desc` function to
	enable more informative diagnostics from callers.

	* src/include/font.h (font::load_desc): Change return type from
	`bool` to `const char` pointer.
	* src/libs/libgroff/font.cpp (font::load_desc): Return null
	pointer literal on failed `open()` or validation failures.
	Return filespec on success.

	* src/libs/libdriver/input.cpp (do_file):
	* src/preproc/grn/main.cpp (getres):
	* src/roff/groff/groff.cpp (main):
	* src/roff/troff/input.cpp (main): Compare `font::load_desc()`
	return value to null pointer literal instead of treating it as a
	Boolean.

	* src/roff/groff/groff.cpp (main): Report full filespec of
	troublesome "DESC" file when complainiing of missing "postpro"
	directive.

2022-06-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Add new Boolean global,
	`need_postdriver`, and initialize it true.
	(main): Make `need_postdriver` false if the `-X` or `-Z` options