@@ -1,3 +1,14 @@
+2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/groff/groff.cpp: Refactor to be more meticulous with
+	memory.  Add globals `saved_path`, `groff_bin_path`, and
+	`groff_font` to store pointers into the process environment
+	returned by `putenv()`; once used, they need to remain valid for
+	the lifetime of the program.
+	(xstrdup): Add `strdup()` wrapper: dies if `strdup()` fails.
+	(main): Split nested `strsave()` and `xputenv()` (until recently
+	`putenv()`) calls.  Free duplicate strings prior to exit.
+
 2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/groff/groff.cpp (main): Rename temporary variable to
